Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58219

Right mouse button up is propagated as left mouse button up on macOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 2
    • 5.6.2, 5.7.1, 5.8.0 RC
    • QPA
    • None
    • OS X 10.11.6, macOS 10.12.2
    • macOS

    Description

      Steps to reproduce:

      1. Build the project (I've used it with kits 5.7.1, 5.6.2)
      2. Run the project
      3. Move mouse cursor to rectangle area (MouseArea)
      4. Press left mouse button
      5. Press right mouse button
      6. Release left button
      7. Release right button

      Expected results:
      Rectangle is empty (indicating that no mouse button is pressed).
      This works on Windows.

      Actual results:
      Left half of rectangle is filled (indicating that left mouse button is pressed, even though no button is pressed).

      Attachments

        For Gerrit Dashboard: QTBUG-58219
        # Subject Branch Project Status CR V

        Activity

          People

            wearyinside Oleg Yadrov
            pavol.markovic Pavol Markovic
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes